--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,9 @@
 body {
-    background-color: red;
+    background-color: pink;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (min-width: 715px) and (max-width: 960px) {
     body {
-        background-color: orange;
-    }
-}
-
-@media screen and (max-width: 550px) {
-    body {
-        background-color: yellow;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    body {
-        background-color: green;
+        background-color: magenta;
     }
 }
